Small fix for UI on mobile screen

--- a/src/components/auth/authentication.scss
+++ b/src/components/auth/authentication.scss
@@ -84,6 +84,7 @@ $breakpoints: (
       button {
         width: 50%;
         padding: 1rem 2rem;
+        margin-bottom: 2rem;
         font-size: 1.125rem;
         background: transparent;
         border: 1px solid $primary-color;
